// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t0.5] unlock then get --key ALLOWED_KEY (roundtrip) then: stdout matches snapshot 1`] = `
{
  "grant": {
    "env": "test",
    "key": {
      "grade": {
        "duration": "permanent",
        "protection": "plaintext",
      },
      "secret": "allowed-key-value-123",
    },
    "org": "testorg",
    "slug": "testorg.test.ALLOWED_KEY",
    "source": {
      "mech": "REPLICA",
      "vault": "os.daemon",
    },
  },
  "status": "granted",
}
`;

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t0.6] get --key ALLOWED_KEY (human readable, without unlock) then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   └─ testorg.test.ALLOWED_KEY
      ├─ status: locked 🔒
      └─ [2mtip: rhx keyrack unlock --env test --key ALLOWED_KEY[0m

"
`;

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t0] get --key ALLOWED_KEY without unlock (in allowlist, on host) then: stdout matches snapshot 1`] = `
{
  "fix": "rhx keyrack unlock --env test --key ALLOWED_KEY",
  "message": "credential 'testorg.test.ALLOWED_KEY' is locked. unlock it first.",
  "slug": "testorg.test.ALLOWED_KEY",
  "status": "locked",
}
`;

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t1.1] get --key SECRET_KEY (human readable) then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   └─ testorg.test.SECRET_KEY
      ├─ status: absent 🫧
      └─ [2mtip: rhx keyrack set --key SECRET_KEY --env all --vault <vault>[0m

"
`;

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t1] get --key SECRET_KEY (on host but NOT in allowlist) then: stdout matches snapshot 1`] = `
{
  "fix": "rhx keyrack set --key SECRET_KEY --env all --vault <vault>",
  "message": "credential 'testorg.test.SECRET_KEY' not found in repo manifest (keyrack.yml)",
  "slug": "testorg.test.SECRET_KEY",
  "status": "absent",
}
`;

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t2] get --key NONEXISTENT_KEY (not in allowlist, not on host) then: stdout matches snapshot 1`] = `
{
  "fix": "rhx keyrack set --key NONEXISTENT_KEY --env all --vault <vault>",
  "message": "credential 'testorg.test.NONEXISTENT_KEY' not found in repo manifest (keyrack.yml)",
  "slug": "testorg.test.NONEXISTENT_KEY",
  "status": "absent",
}
`;

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t3.5] unlock then get --for repo then: stdout matches snapshot 1`] = `
[
  {
    "grant": {
      "env": "test",
      "key": {
        "grade": {
          "duration": "permanent",
          "protection": "plaintext",
        },
        "secret": "allowed-key-value-123",
      },
      "org": "testorg",
      "slug": "testorg.test.ALLOWED_KEY",
      "source": {
        "mech": "REPLICA",
        "vault": "os.daemon",
      },
    },
    "status": "granted",
  },
]
`;

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t3] get --for repo without unlock then: stdout matches snapshot 1`] = `
[
  {
    "fix": "rhx keyrack unlock --env test --key ALLOWED_KEY",
    "message": "credential 'testorg.test.ALLOWED_KEY' is locked. unlock it first.",
    "slug": "testorg.test.ALLOWED_KEY",
    "status": "locked",
  },
]
`;

exports[`keyrack allowlist given: [case2] env var exists but key not in allowlist when: [t0] get --key SECRET_FROM_ENV with env var set then: stdout matches snapshot 1`] = `
{
  "grant": {
    "env": "test",
    "key": {
      "grade": {
        "duration": "permanent",
        "protection": "plaintext",
      },
      "secret": "secret-env-value-789",
    },
    "org": "testorg",
    "slug": "testorg.test.SECRET_FROM_ENV",
    "source": {
      "mech": "PERMANENT_VIA_REPLICA",
      "vault": "os.envvar",
    },
  },
  "status": "granted",
}
`;
